# Deploy-ML-Model

./: .dvc — ярлык.lnk  Makefile  README.md  assdd.ipynb  data.dvc  docker-compose.yml  dvc.yaml  i.py  pyproject.toml  start.py
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/interim/: .gitignore  data_cleaned.csv  data_features.csv
data/raw/: .gitignore  all_data.csv  all_data.csv.dvc
docker/: docker-compose.yamlA.txt
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/.trash/0/160aac2c12844f26817205b79ff19a81/: meta.yaml
mlruns/.trash/0/1ceaf393b1a34565b8771ea3cce25baa/: meta.yaml
mlruns/.trash/0/35c73781b532441f9a764f22b7563209/: meta.yaml
mlruns/.trash/0/39a4757143e14560b72968dc9aa84fd8/: meta.yaml
mlruns/.trash/0/4a52a1cfdd2f4eb78e8322bc7abaaa0f/: meta.yaml
mlruns/.trash/0/643a62ac0f1f46a58eb10829a85f4819/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/3d57381b4aba4525b40cf7e21c159e2f/: meta.yaml
mlruns/1/5c7cc2843979402ea369a876a12e3ea0/: meta.yaml
mlruns/1/cee580a7ab4046aabe9deef387326de1/: meta.yaml
mlruns/1/e9c42d8f9625406d96ae1fdfd32ac9c0/: meta.yaml
models/: model.clf
models/model_cat/: MLmodel  model.cb
notebooks/: Tricolor_test_Ryazanov.ipynb
reports/: .gitignore  scores.csv
src/: __init__.py  sad.ipynb  start.py
src/data/: clean_data.py
src/features/: add_features.py
src/models/: evaluate.py  prepare_datasets.py  train.py
(+24 files in other folders)
