[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Ryazanov Igor"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
snakemake = "^7.6.1"
dvc = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
